<resources>
    <string name="app_name">Wish You</string>
    <string name="search_wish_keyword">Search Wish Keyword…</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="writer_picture">Writer Picture</string>
    <string name="write_your_wishes">Write Your Wishes....</string>
    <string name="post">Post</string>
    <string name="load_your_wishes">Load Your Wishes</string>
    <string name="load_writer_wishes">Load Writer Wishes</string>
    <string name="signin_sign_up">SignIn / Sign Up</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


</resources>
