<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5sp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20sp"
        app:contentPadding="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5sp"
            android:paddingRight="5sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/writerName"
                    app:srcCompat="@android:drawable/ic_menu_delete" />

                <ImageView
                    android:id="@+id/writerPic"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="5sp"
                    android:contentDescription="@string/writer_picture"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/writerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/writerPic"
                    android:layout_toEndOf="@+id/writerPic"
                    android:text="Writer Name"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/writerName"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/writerPic"
                    android:text="Date and Time"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp">

                <TextView
                    android:id="@+id/mainWishText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wish Text"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/shareCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="Share Count"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/likeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:text="Like Count"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/like"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/like"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/share"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>